# libcgmx

./: CMakeLists.txt  README.md
src/cgmx/: common.h  mat4.cpp  vec3.cpp  vec4.cpp
tests/: main.cpp
